--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h1 {
 
 .reel {
     width: 100px;
-    height: 100px; /* Изменено на 100px для отображения одного символа */
+    height: 100px;
     border: 2px solid #fff;
     border-radius: 10px;
     overflow: hidden;
